Coder for testing added but not finished

--- a/obc_player/obc_player.vcxproj
+++ b/obc_player/obc_player.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Coder.cpp" />
     <ClCompile Include="Decoder.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
@@ -148,6 +149,8 @@
     <None Include="VertexShader.glsl" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CodecUtils.h" />
+    <ClInclude Include="Coder.h" />
     <ClInclude Include="Decoder.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="Sprite.h" />
