--- a/obc_player/obc_player.vcxproj.filters
+++ b/obc_player/obc_player.vcxproj.filters
@@ -13,10 +13,10 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Header Files\Decoder">
+    <Filter Include="Header Files\Codec">
       <UniqueIdentifier>{099559b7-186f-4e29-b5c5-3b5b29f73e80}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Decoder">
+    <Filter Include="Source Files\Codec">
       <UniqueIdentifier>{29ade190-5e30-4780-87b7-4dd19b1ee9d7}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -34,7 +34,10 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Decoder.cpp">
-      <Filter>Source Files\Decoder</Filter>
+      <Filter>Source Files\Codec</Filter>
+    </ClCompile>
+    <ClCompile Include="Coder.cpp">
+      <Filter>Source Files\Codec</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -60,7 +63,13 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Decoder.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Codec</Filter>
+    </ClInclude>
+    <ClInclude Include="Coder.h">
+      <Filter>Header Files\Codec</Filter>
+    </ClInclude>
+    <ClInclude Include="CodecUtils.h">
+      <Filter>Header Files\Codec</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
