--- a/obc_player/packages.config
+++ b/obc_player/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="GLMathematics" version="0.9.5.4" targetFramework="native" />
+  <package id="opencv3.1" version="1.0" targetFramework="native" />
+  <package id="opencv3.1.redist" version="1.0" targetFramework="native" />
+  <package id="opencv3.redist" version="3.0.0.1" targetFramework="native" />
 </packages>
